<resources>
    <string name="login_app_title">二维火收银</string>
    <string name="bt_sure">确认</string>
    <string name="defaults">-</string>
    <string name="exit_app">再按一次退出应用程序</string>
    <string name="save">保存</string>
    <string name="splash_from">二维火出品</string>
    <string name="open_cloud_cash_desk">开启二维火收银(手机版)</string>
    <string name="request_permission_content">为了您能正常使用二维火收银，需要开启</string>
    <string name="hit_user_name">手机号码</string>
    <string name="hit_user_pwd">密码</string>
    <string name="btn_login">登录</string>
    <string name="toast_no_user_name">手机号不能为空！</string>
    <string name="toast_is_no_valid_phone">请输入正确的手机号！</string>
    <string name="toast_no_user_pwd">密码不能为空！</string>
    <string name="pass_word_length">密码必须是6到20位字母或数字！</string>
    <string name="check_shop">我工作的店家</string>
    <string name="hit_shop_name_and_code">店家名称/店家编码</string>
    <string name="please_input_seat_code">请输入桌号</string>
    <string name="check_shop_dialog_title">确定选择该店铺？</string>
    <string name="ok">确定</string>
    <string name="main_tab_find_order">找单</string>
    <string name="main_tab_msg_center">消息中心</string>
    <string name="main_filter">展示方式</string>
    <string name="main_tab_set">我的</string>
    <string name="main_activity_menu_item_search">搜索</string>
    <string name="activity_label_order_seat_search">搜索</string>
    <string name="main_activity_green_hand_next">下一步</string>
    <string name="main_activity_green_hand_start_use">开始使用</string>
    <string name="main_activity_green_hand_step_1_hint">无需点菜直接收款</string>
    <string name="main_activity_green_hand_step_2_hint">查看已结账单、\n账单汇总</string>
    <string name="main_activity_green_hand_step_3_hint">管理外卖订单</string>
    <string name="main_activity_green_hand_step_4_hint">未结的桌位单、零售单</string>
    <string name="main_activity_green_hand_step_5_hint">扫码点菜、加菜、支付等消息</string>
    <string name="main_activity_green_hand_step_6_hint">配置小票、标签打印机</string>
    <string name="main_no_attention_title">你还没有添加关注的桌位或订单</string>
    <string name="main_no_attention_button">立即添加</string>
    <string name="main_no_attention_order_content">关注后才能处理订单，接收顾客消息</string>
    <string name="main_no_attention_message_content">消息中心中默认展示您关注的座位或订单的消息 </string>
    <string name="main_no_attention_place_content">在 “右侧栏” - “我关注的桌位或订单” 进行管理</string>
    <string name="select_seat_watched_seat">我关注的桌位</string>
    <string name="select_seat_all_seat">全部桌位</string>
    <string name="text_select_seat_none_watch_title">您没有关注的桌位</string>
    <string name="text_select_seat_none_watch_content">在“找单”页面可以添加关注的桌位</string>
    <string name="order_list_header_title">关注的订单</string>
    <string name="table_list_header_title">关注的桌位</string>
    <string name="order_list_search_hit">请输入订单号</string>
    <string name="no_pay">未付款</string>
    <string name="no_pay_all">未付清</string>
    <string name="pay_all">已付清</string>
    <string name="end_pay">已结账</string>
    <string name="filter">筛选</string>
    <string name="filter_order_type_title">订单类型</string>
    <string name="filter_order_state_title">订单状态</string>
    <string name="filter_ok">完成</string>
    <string name="filter_cancel">取消</string>
    <string name="person_head">头像</string>
    <string name="person_phone_num">手机号码</string>
    <string name="person_name">姓名</string>
    <string name="person_sex">性别</string>
    <string name="person_modify_password">修改密码</string>
    <string name="person_profile">个人信息</string>
    <string name="person_attention">我关注的桌位或订单</string>
    <string name="customer_service">在线客服</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_about">关于二维火</string>
    <string name="person_logout">退出登录</string>
    <string name="person_logout_hint">确认要退出登录吗？</string>
    <string name="person_logout_and_offwork_hint">确认要退出登录并下班吗？</string>
    <string name="person_feedback_hint">客官，满不满意您都发句话。</string>
    <string name="person_feedback_contact_email">您的邮箱:</string>
    <string name="person_feedback_contact_email_hint">选填，方便我们给您反馈</string>
    <string name="person_feedback_send_feedback">发送反馈意见</string>
    <string name="person_feedback_send_feedback_success">意见反馈发送成功</string>
    <string name="person_feedback_send_feedback_empty_hint">意见反馈不能为空！</string>
    <string name="person_about_url">www.2dfire.com</string>
    <string name="person_about_company_name">杭州迪火科技有限公司</string>
    <string name="person_about_dfire_produced">二维火出品</string>
    <string name="person_profile_modifypwd_oldpwd">原密码</string>
    <string name="person_profile_modifypwd_newpwd">新密码</string>
    <string name="person_profile_modifypwd_newpwd_not_equals_confirm">您两次输入的密码不一致，请仔细检查</string>
    <string name="person_profile_modifypwd_confirmpwd">密码确认</string>
    <string name="person_profile_modifypwd_oldpwd_hint">请输入旧密码</string>
    <string name="person_profile_modifypwd_newpwd_hint">请输入6位以上密码</string>
    <string name="person_profile_modifypwd_confirmpwd_hint">请再次确认密码</string>
    <string name="person_profile_modifypwd_success">密码修改成功</string>
    <string name="attention_deskarea_empty_hint">其他</string>
    <string name="msg_attention_desk_delete_area_hint">确定要删除%1$s下所有关注的桌位吗？</string>
    <string name="msg_attention_desk_kind_random">散座</string>
    <string name="msg_attention_desk_kind_box">包厢</string>
    <string name="msg_attention_desk_kind_card">卡座</string>
    <string name="msg_attention_desk_customer_number">%1$d人</string>
    <string name="msg_attention_desk_kind">%1$d人%2$s</string>
    <string name="msg_attention_desk_kind_bracket">&#40;%1$d人%2$s&#41;</string>
    <string name="person_network_detection">网络检测</string>
    <string name="customer_service_app_version">应用版本：</string>
    <string name="customer_service_phone_version">用户系统：</string>
    <string name="customer_service_not_login_user">未登录用户-</string>
    <string name="desk_msg_deskid">桌号: %1$s</string>
    <string name="desk_msg_orderid">单号: %1$s</string>
    <string name="desk_msg_taketout_orderid">%1$s 单号: %2$s</string>
    <string name="desk_msg_taketout_title">%1$s外卖</string>
    <string name="desk_msg_iknow">我知道了</string>
    <string name="desk_msg_handle_now">马上审核</string>
    <string name="desk_msg_handled">已处理</string>
    <string name="desk_msg_accepted">已同意</string>
    <string name="desk_msg_rejected">已拒绝</string>
    <string name="desk_msg_timeout">已超时</string>
    <string name="msg_detail_order_deskid">桌号</string>
    <string name="msg_detail_order_peoplecount">人数 %1$d</string>
    <string name="msg_detail_order_remark">客单备注: %1$s</string>
    <string name="msg_detail_order_code">No.%1$s</string>
    <string name="msg_detail_foods_count">%1$d份</string>
    <string name="msg_detail_price_format">%1$s</string>
    <string name="msg_detail_price_negative_format">%1$s</string>
    <string name="msg_detail_combo_foods_count">x%1$s</string>
    <string name="msg_detail_order_agree">同意</string>
    <string name="msg_detail_order_reject">拒绝</string>
    <string name="msg_detail_order_reject_hint">您确定要拒绝本次加菜吗?</string>
    <string name="order_find_retail_code">No.%d</string>
    <string name="order_find_text_desk_desc_example">（四人散座）</string>
    <string name="order_find_image_customer_number_description">用餐人数图标</string>
    <string name="order_find_text_customer_number">4人</string>
    <string name="order_find_text_eat_time_example">60分钟</string>
    <string name="order_find_text_desk_name_example">A1</string>
    <string name="order_find_image_pay_all_description">已付清图标</string>
    <string name="order_find_image_desk_eat_time_description">用餐时间图标</string>
    <string name="order_find_image_order_find_print_description">是否打印图标</string>
    <string name="order_find_eat_time">%d分钟</string>
    <string name="order_search_type_seat">桌位</string>
    <string name="order_search_type_retail_order">单号</string>
    <string name="order_seat_search_empty_seat">没有找到相符的桌位</string>
    <string name="order_seat_search_empty_order">没有找到相符的零售订单</string>
    <string name="order_seat_search_order_hit">请输入零售单的订单号</string>
    <string name="mast_fill">必填</string>
    <string name="cancel">取消</string>
    <string name="msg_msgcenter_category">消息分类</string>
    <string name="msg_msgcenter_new">关注的新消息(我关注的)</string>
    <string name="msg_msgcenter_customer_new">关注的新消息</string>
    <string name="msg_msgcenter_handled">已处理消息</string>
    <string name="msg_msgcenter_all">所有新消息</string>
    <string name="msg_msgcenter_batch_handle">全部标记为已处理</string>
    <string name="msg_msgcenter_result_all_handled">已处理</string>
    <string name="msg_msgcenter_result_all_handled_hint">确定将不需要审核的新消息标记为已处理（共%1$d条）？（包括支付、服务铃消息）</string>
    <string name="msg_msgcenter_addfood_scan_desk_content">扫码点菜，%1$d个菜</string>
    <string name="msg_msgcenter_addfood_scan_order_content">扫码加菜，%1$d个菜</string>
    <string name="msg_msgcenter_autocheck_scan_desk_content">扫码加菜，%1$d个菜</string>
    <string name="msg_msgcenter_prepay_scan_desk_content">扫码点菜，%1$d个菜，已支付%2$s元，%3$s</string>
    <string name="menu_balance">商品沽清</string>
    <string name="edit_menu_balance">编辑沽清商品</string>
    <string name="add_menu_balance">添加沽清商品</string>
    <string name="select_menu_balance">选择沽清商品</string>
    <string name="status_sold_out">已售完</string>
    <string name="sold_out_instance_name">商品名称</string>
    <string name="sold_out_instance_status">库存状态</string>
    <string name="sold_out_instance_no">库存数量</string>
    <string name="cancel_sold_out">取消沽清</string>
    <string name="already_sold_out">已售完</string>
    <string name="not_sold_out">未售完</string>
    <string name="select_sold_out_instance">选择沽清商品</string>
    <string name="search_view_instance_name_hint">请输入菜肴名称</string>
    <string name="input_last_count_warm">请输入库存数量</string>
    <string name="get_all_menu_error">获取商品列表失败</string>
    <string name="no_sold_out_menu">没有更多沽清商品</string>
    <string name="get_menu_balance_failure">获取沽清商品失败</string>
    <string name="get_menu_failure">获取菜品列表失败</string>
    <string name="add_menu_balance_failure">添加沽清商品失败</string>
    <string name="update_menu_balance_failure">更新沽清商品失败</string>
    <string name="cancel_menu_balance_failure">取消沽清商品失败</string>
    <string name="menu_balance_num_input_null">请输入库存数量</string>
    <string name="menu_balance_num_input_error">沽清数量不能大于1000</string>
    <string name="clear_all_menu_balance_warn">确定要清空沽清吗？</string>
    <string name="menu_balance_clear">清空沽清</string>
    <string name="menu_balance_empty">暂无沽清商品</string>
    <string name="menu_balance_add">添加</string>
    <string name="order_no_end_pay">暂无已结账单</string>
    <string name="show_new_msg">接收推送消息</string>
    <string name="show_new_msg_sub_title">关闭后，将不会收到推送消息</string>
    <string name="receive_waiter_wechat_msg">接收来自二维火小二、微信等的服务铃消息</string>
    <string name="receive_takeout_msg">接收外卖单消息</string>
    <string name="auto_check_takeout">自动审核小二外卖单</string>
    <string name="auto_check_takeout_sub_title">打开后，将自动审核本店所有小二外卖单</string>
    <string name="auto_check_third_takeout">自动审核第三方外卖单</string>
    <string name="auto_check_third_takeout_sub_title">打开后，将自动审核本店所有第三方外卖单</string>
    <string name="custom_tts">不同类型的消息使用不同的提示音</string>
    <string name="custom_tts_sub_title">默认为统一的提示音，如需不同类型的消息提示不同的语音，可打开此开关，进行设置</string>
    <string name="scan_order">堂食订单</string>
    <string name="scan_order_sub_title">xx桌，顾客扫码下单了</string>
    <string name="takeout_title">外卖订单</string>
    <string name="takeout_sub_title">您有一个{外卖来源}订单</string>
    <string name="pay_title">支付</string>
    <string name="pay_sub_title">xx桌，{付款方式}收款xx元</string>
    <string name="chain_headquarters_prompt">连锁总部和分公司暂时无法使用二维火收银(手机版)</string>
    <string name="change_shop">切换店家</string>
    <string name="chain_manager_path">在“我的”-“我工作的店家”中，可以管理我工作的店家</string>
    <string name="chain_manager_explanation">二维火收银(手机版)支持开单、点菜、结账、管理桌位、处理消息等功能，可配合二维火收银机一起使用。</string>
    <string name="retail_receive_takeout_msg">接收线上订单消息</string>
    <string name="end_account">结账</string>
    <string name="back_end_account">反结账</string>
    <string name="success_end_account">结账完毕</string>
</resources>