<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <Button
        android:id="@+id/button_end_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/end_account"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/button_check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/back_end_account"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/button_end_pay_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/success_end_account"
        android:textSize="@dimen/text_size" />

</RelativeLayout>
