<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_no_attention"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_attention_seat"/>

    <TextView
        android:id="@+id/text_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/main_no_attention_title"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button_toggle_ripple"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/main_no_attention_button"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/text_add_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="@dimen/padding_small"
        android:text="@string/main_no_attention_order_content"
        android:textColor="@color/hintTextColor"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/main_no_attention_place_content"
        android:textColor="@color/hintTextColor"
        android:textSize="@dimen/text_size"
        android:visibility="gone"/>

</LinearLayout>