<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/padding_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_ban_shop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/chain_headquarters_prompt"
        android:textColor="@color/primaryColor"/>

    <Button
        android:id="@+id/button_change_shop"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_button_transparent_frame"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/change_shop"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/chain_manager_path"
        android:textColor="@color/tertiaryTextColor"
        android:textSize="@dimen/text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="40dp"
        android:background="@color/tertiaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/chain_manager_explanation"
        android:textColor="@color/tertiaryTextColor"
        android:textSize="@dimen/text_size"/>


</LinearLayout>