<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <View style="@style/DividerStyle" />

        <TextView
            android:id="@+id/text_customer_new_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="15dp"
            android:text="@string/msg_msgcenter_customer_new"
            android:textColor="@color/accentColor" />

        <View style="@style/DividerStyle" />

        <TextView
            android:id="@+id/text_handled_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="15dp"
            android:text="@string/msg_msgcenter_handled" />

        <View style="@style/DividerStyle" />

        <TextView
            android:id="@+id/text_all_new_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="15dp"
            android:text="@string/msg_msgcenter_all" />

        <View style="@style/DividerStyle" />
    </LinearLayout>

</RelativeLayout>